fix: show toc on mobile

--- a/sass/_docs.scss
+++ b/sass/_docs.scss
@@ -6,54 +6,51 @@ header {
     }
 
     .metadata {
-        font-size: .8rem;
+        font-size: 0.8rem;
     }
 }
 
 .docs-body {
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: start;
+
+    @media (min-width: 767px) {
+        flex-direction: row;
+    }
 
     --docs-menu-width: 18rem;
 }
 
 .docs-menu {
-    position: sticky;
-    top: 95px;
-    height: 100svh;
+    position: static;
     overflow-y: auto;
     background-color: #fff;
-    border-right: 1px solid var(--borders-color);
-    max-width: var(--docs-menu-width);
+    border-bottom: 1px solid var(--borders-color);
+    width: 100%;
+
+    @media (min-width: 767px) {
+        border-right: 1px solid var(--borders-color);
+        flex-direction: row;
+        position: sticky;
+        top: 95px;
+        height: 100svh;
+        max-width: var(--docs-menu-width);
+    }
 
     .docs-menu-inner {
         padding: 1.5rem;
     }
 
-    @media (max-width: 767px) {
-        /*
-        This trick is added because Chrome on Android doesn't re-calculate the
-        height of the viewport before the user stops scrolling. We're
-        artificially making the panel higher than it is
-        */
-        --panel-bottom-trick: 300px;
-        border-right: unset;
-        max-width: unset;
-        inset-inline-end: 0;
-        inset-block-end: calc(-1 * var(--panel-bottom-trick));
-        padding-block-end: calc(var(--panel-bottom-trick) + 5rem);
-        z-index: 990;
-    }
-
     .submenu-checkbox {
         display: none;
 
-        &:not(:checked)~.section-submenu-wrap {
+        &:not(:checked) ~ .section-submenu-wrap {
             display: none;
         }
 
-        &:not(:checked)~.submenu-title {
+        &:not(:checked) ~ .submenu-title {
             .arrow {
                 background-image: url("/assets/down-arrow.svg");
                 width: 1rem;
@@ -62,7 +59,7 @@ header {
             }
         }
 
-        &:checked~.submenu-title {
+        &:checked ~ .submenu-title {
             .arrow {
                 background-image: url("/assets/up-arrow.svg");
                 width: 1rem;
@@ -75,7 +72,7 @@ header {
     .submenu-title {
         display: flex;
         flex-direction: row;
-        gap: .8rem;
+        gap: 0.8rem;
 
         font-size: 1.2rem;
         font-weight: 700;
@@ -90,7 +87,7 @@ header {
 
         li {
             margin-inline-start: 1em;
-            margin-block: .5em;
+            margin-block: 0.5em;
 
             ul {
                 border-left: 1px solid #bbb;
@@ -102,7 +99,6 @@ header {
             }
         }
 
-
         a {
             color: var(--color-text);
         }
@@ -110,7 +106,6 @@ header {
 }
 
 .docs-content {
-
     flex: 1;
 
     article p img {
@@ -119,38 +114,13 @@ header {
     }
 }
 
-#docs-menu-button {
-    position: fixed;
-    display: none;
-    z-index: 991;
-
-    @media (max-width: 767px) {
-        display: inline-block;
-    }
-
-    bottom: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-
-    background-color: #000;
-    color: #fff;
-    border: transparent;
-    border-radius: 9999px;
-    padding: .5rem 2rem;
-    box-shadow: 0 2px 2px #666;
-}
-
-#docs-menu-checkbox:checked~#docs-menu-button {
-    background-color: #333;
-}
-
-#docs-menu-checkbox:not(:checked)~.docs-menu {
+#docs-menu-checkbox:not(:checked) ~ .docs-menu {
     @media (max-width: 767px) {
         display: none;
     }
 }
 
-#docs-menu-checkbox:checked~.docs-content {
+#docs-menu-checkbox:checked ~ .docs-content {
     @media (max-width: 767px) {
         display: none;
     }
@@ -159,7 +129,7 @@ header {
 .mjolnir_button {
     border: 1px solid rgb(217, 217, 217);
     border-radius: 1000px;
-    padding: 0 .4rem;
+    padding: 0 0.4rem;
     background-color: rgb(242, 247, 252);
 }
 
@@ -181,7 +151,7 @@ figure {
     }
 
     figcaption {
-        font-size: .8rem;
+        font-size: 0.8rem;
         text-align: center;
     }
 }
